--- a/AprendendoLayout/style.css
+++ b/AprendendoLayout/style.css
@@ -4,7 +4,26 @@ h1
 }
 header#topo
 {
-    background-color: rgb(247, 163, 53);
+    background-color: rgb(247, 53, 205);
+}
+nav#menu
+{
+    text-align: center;
+}
+nav#menu li
+{
+    display: inline-block;
+    color: aliceblue;
+    background-color: rgb(163, 128, 155);
+    font-size: 25px;
+    padding: 10px;
+    margin: 2px;
+    border-radius: 15%;
+    transition: background-color 1s;
+}
+nav#menu li:hover
+{
+    background-color: rgb(104, 64, 95);
 }
 div#corpo
 {
@@ -41,4 +60,21 @@ section#principal
     background-color: rgb(178, 132, 221);
     padding: 40px;
     border-radius: 0 3% 3% 0;
+}
+code
+{
+    position: relative;
+    width: 375px;
+    background-color: white;
+    border: 1px solid black;
+}
+code.box
+{
+    width: 350px;
+    position: relative;
+    background-color: rgb(0,0,0);
+    color: white;
+    margin: 2px;
+    padding: 2px;
+    border: 1px solid rgb(5, 5, 5);
 }
