--- a/AprendendoLayout/style.css
+++ b/AprendendoLayout/style.css
@@ -1,10 +1,10 @@
-h1
+h1,h2,h3,h4
 {
     text-align: center;
 }
 header#topo
 {
-    background-color: rgb(247, 53, 205);
+    background-color: rgb(185, 176, 182);
 }
 nav#menu
 {
@@ -48,7 +48,7 @@ div#container
 }
 aside#esquerda
 {
-    width: 750px;
+    width: 900px;
     position: relative;
     background-color: rgb(245, 212, 170);
     padding: 40px;
@@ -77,4 +77,8 @@ code.box
     margin: 2px;
     padding: 2px;
     border: 1px solid rgb(5, 5, 5);
+}
+div#iframe
+{
+    align-items: center;
 }
