--- a/AprendendoLayout/style.css
+++ b/AprendendoLayout/style.css
@@ -2,6 +2,11 @@ h1,h2,h3,h4
 {
     text-align: center;
 }
+p
+{
+    text-align: justify;
+    text-indent: 1.5em;
+}
 header#topo
 {
     background-color: rgb(185, 176, 182);
